<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:orientation="horizontal"
    app:columnCount="4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtOpis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnSpan="4"
        app:layout_gravity="fill"
        android:text="@string/label_wartosci"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/txtLiczba1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textSciana1"
        app:layout_column="1"
        app:layout_gravity="center"
        app:layout_rowSpan="2"
        android:clickable="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/k6_1"
        android:maxHeight="@dimen/abc_dropdownitem_icon_width"
        android:maxWidth="@dimen/abc_dropdownitem_text_padding_left"
        android:onClick="DieChange" />
    
     <TextView
        android:id="@+id/txtLiczba2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />
        
     <TextView
         android:id="@+id/textSciana2"
         app:layout_column="3"
         app:layout_row="1"
         app:layout_gravity="center"
         app:layout_rowSpan="2"
         android:clickable="true"
         android:gravity="center"
         android:background="@drawable/k6_1"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:onClick="DieChange"
         android:visibility="invisible" />
         
     <TextView
        android:id="@+id/textZakres1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="0"
        app:layout_row="2"
        android:text="1-6"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <TextView
        android:id="@+id/textZakres2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        android:text="1-6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

     <TextView
        android:id="@+id/txtLiczba3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />
     
    <TextView
        android:id="@+id/textSciana3"
        app:layout_gravity="center"
        app:layout_column="1"
        app:layout_rowSpan="2"
        android:clickable="true"
        android:gravity="center"
        android:background="@drawable/k6_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="DieChange"
        android:visibility="invisible" />
         
      <TextView
        android:id="@+id/txtLiczba4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />
     
     <TextView
        android:id="@+id/textSciana4"
        app:layout_column="3"
        app:layout_gravity="center"
        app:layout_rowSpan="2"
        android:clickable="true"
        android:gravity="center"
        android:background="@drawable/k6_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="DieChange"
        android:visibility="invisible" />
      
      <TextView
        android:id="@+id/textZakres3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="0"
        android:text="1-6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textZakres4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        android:text="1-6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />
      
    <TextView
        android:id="@+id/txtLiczba5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="0"
        android:layout_marginBottom="39dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textSciana5"
        app:layout_column="1"
        app:layout_gravity="center"
        app:layout_rowSpan="2"
        android:clickable="true"
        android:gravity="center"
		android:background="@drawable/k6_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxHeight="@dimen/abc_dropdownitem_icon_width"
        android:maxWidth="@dimen/abc_dropdownitem_icon_width"
        android:onClick="DieChange"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtLiczba6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textSciana6"
        app:layout_column="3"
        app:layout_gravity="center"
        app:layout_rowSpan="2"
        android:clickable="true"
        android:gravity="center"
		android:background="@drawable/k6_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="DieChange"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textZakres5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="0"
        android:text="1-6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textZakres6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        android:text="1-6"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnDodaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="0"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_horizontal"
        android:onClick="onAddDie"
        android:text="@string/button_dodaj" />
    
    <Button
        android:id="@+id/btnUsun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_column="2"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_horizontal"
        android:onClick="onRemoveDie"
        android:text="@string/button_usun" />
        
    <Button
        android:id="@+id/buttonLosuj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        android:onClick="onButtonClick"
        android:text="@string/button_losuj"
        android:visibility="visible" />
    
</android.support.v7.widget.GridLayout>